# matrix-client-server-local

./: .gitignore  Cargo.toml  Readme.md  build.rs
.github/workflows/: tests.yml  unittests.yml
cpp/: matrix.cpp  matrix.hpp
src/: bridge.rs  client.rs  lib.rs  matrix.rs  server.rs  server_lib.rs  shared_buffer.rs  stats.rs  thread_pool.rs
