[package]
name = "irreducible"
version = "0.1.0"
edition = "2021"
authors = ["Jimmy Aguilar Mena <aguilarmenajimmy@gmail.com>"]

[dependencies]
rand = "0.8"
nix = "0.24"
cxx = "1.0" # Communicate with C++

[build-dependencies]
cxx-build = "1.0"

[lib]
name = "irreducible"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

