[package]
name = "irreducible"
version = "0.1.0"
edition = "2021"
authors = ["Jimmy Aguilar Mena <aguilarmenajimmy@gmail.com>"]

[dependencies]
rand = "0.8"
nix = { version = "0.29.0", features = ["sched","mman","fs","socket"] }
cxx = "1.0" # Communicate with C++

[build-dependencies]
cxx-build = "1.0"

[lib]
name = "irreducible"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[profile.release]
debug = true

